src/objects/PSA_Invoice_Summary_Line__c.object
<CustomObject>
    <description>Contains categorized subtotals of Billing Event Items so they can be presented on the invoice</description>
    <fields>
        <fullName>PSA_Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event_Name__c</fullName>
        <description>Used to copy include the related billing event&apos;s name to the invoice summary line history record when invoice summary lines are deleted</description>
        <formula>PSA_Billing_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to copy include the related billing event&apos;s name to the invoice summary line history record when invoice summary lines are deleted</inlineHelpText>
        <label>Billing Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>Invoice Summary Lines</relationshipLabel>
        <relationshipName>Invoice_Summary_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSA_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Revenue_Recognition_Model__c</fullName>
        <label>Revenue: Recognition Model</label>
        <picklist>
            <picklistValues>
                <fullName>As Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Summary_Line_Type__c</fullName>
        <description>Each option contains a valid category according to which billing event items will be subtotaled and displayed on an invoice</description>
        <inlineHelpText>Categories according to which billing event items will be subtotaled and displayed on an invoice</inlineHelpText>
        <label>Summary Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billable Expenses Charge - As % of Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Expenses Charge - As Flat Amount per Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Expenses Charge - As Incurred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Expenses Charge - Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Expenses Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Discount - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Credits</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Type_Plus_Description__c</fullName>
        <formula>TEXT(PSA_Summary_Line_Type__c) + &apos; - &apos; + PSA_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Plus Description</label>
        <type>Text</type>
    </fields>
    <label>Invoice Summary Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Summary_Line_Type__c</columns>
        <columns>PSA_Description__c</columns>
        <columns>PSA_Amount__c</columns>
        <columns>PSA_Revenue_Recognition_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Summary Line Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Summary Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>